@@ -1,6 +1,8 @@
 
                               Kiji Scoring Release Notes
 Version 0.4.0
+  * SCORE-32. NewerThan now exposes a getter getNewerThanTimeInMillis() to retrieve the configured
+      time before which data is considered stale.
   * SCORE-52. FreshTool now accepts File paths for policy state using the --policy-state-file flag.
   * SCORE-27. PolicyContext now supports a getStore(String) operation so that FreshnessPolicys can
       access KeyValue stores in calls to isFresh().
